Decorator adding works; Server side pagination works

--- a/frontend/src/assets/template.html
+++ b/frontend/src/assets/template.html
@@ -1,6 +1,6 @@
 <body>
     <header class="bg-primary text-white py-3">
-        <h1>Kutak dobre hrane</h1>
+        <h1>Garden Scaping</h1>
     </header>
     <nav></nav>
     <main>
